--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div id="root">
+    <h1>Hello</h1>
     <!-- <h1>Hello world!!!</h1> -->
     <!-- <script>
       const heading = document.createElement('h1');
