episode 2-knowing about JSX

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./index.css"
 </head>
 <body>
-  <div id="root">
+  <div id="root" class="root">
     <h1>Not Rendered</h1>
     <!-- <h1>Hello world!!!</h1> -->
     <!-- <script>
